--- a/875 part-3.md
+++ b/875 part-3.md
@@ -1,180 +1,147 @@
-# Detailed Summary of IS 875 (Part 3) :2015 – Wind Loads
-
-**Design Loads (Other than Earthquake) for Buildings and Structures — Code of Practice: Part 3 Wind Loads (Third Revision)**  
-This standard provides a structured methodology for determining wind loads on buildings and structures. It combines background explanations with practical formulas to help engineers evaluate both static and dynamic wind effects. The document is organized into clauses and sub-clauses that cover everything from wind speed determination to specific formulas used in design.
+# IS 875 (Part 3) : 2015 (Reaffirmed 2020)  
+**Design Loads (Other than Earthquake) for Buildings and Structures — Wind Loads**  
 
 ---
 
-## 1. Scope
-
-- **Purpose and Applicability:**  
-  The standard defines the wind forces (both static and dynamic) that must be considered in structural design. For most conventional, short, and heavy structures, static analysis (which assumes a constant wind load over time) is acceptable. However, for tall, slender, or irregular structures (such as towers, chimneys, and long-span bridges), dynamic effects—such as oscillations caused by gusts—must be evaluated using methods like the Gust Factor Method.
-
-- **Practical Considerations:**  
-  Wind loads are not only critical for the completed structure but must also be considered during different stages of construction. In regions where severe winds coincide with icing, the design must account for additional loading on members and connections.
-
-- **Special Structures:**  
-  For structures like chimneys and transmission towers, refer to specific design codes in conjunction with this standard.
+## 1. Scope  
+- **Objective**: Provides guidelines for calculating static and dynamic wind loads on buildings, structures, and components.  
+- **Static Analysis**: Suitable for conventional structures (e.g., low-rise buildings).  
+- **Dynamic Analysis**: Mandatory for tall/slender structures (e.g., skyscrapers, chimneys, towers).  
+- **Special Cases**: Includes structures under construction and cyclone-prone regions.  
+- **Exclusions**: Unconventional geometries or extreme environmental conditions require specialized studies.  
 
 ---
 
-## 2. References
-
-- **Integration with Other Standards:**  
-  The document refers to several other Indian Standards (e.g., IS 15498 for cyclonic resistance and other parts of IS 875 for dead, imposed, snow, and special loads). These references ensure that the wind load design is consistent with overall structural safety practices, allowing designers to use wind load data along with other loadings (such as gravity loads) for a comprehensive design approach.
-
----
-
-## 3. Notations and Terminology
-
-### 3.1 Key Notations
-
-- **V<sub>b</sub>**:  
-  The regional basic wind speed, measured as a 3-second gust at 10 m above ground level in open terrain.
-
-- **V<sub>z</sub>**:  
-  The design wind speed at a specific height \( z \), derived from \( V_b \) by applying various modification factors.
-
-- **Modification Factors (\( k_1, k_2, k_3, k_4 \))**:  
-  - \( k_1 \): Risk coefficient (relates to design life and reliability).  
-  - \( k_2 \): Terrain roughness and height factor (reflects local ground conditions).  
-  - \( k_3 \): Topography factor (adjusts for local features such as hills or valleys).  
-  - \( k_4 \): Cyclonic importance factor (increases wind speed estimates in cyclone-prone regions).
-
-- **Wind Pressure (\( p_z \)) and Design Wind Pressure (\( p_d \))**:  
-  \( p_z \) represents the pressure due to wind at height \( z \), and \( p_d \) is the effective pressure used in design after accounting for additional factors.
-
-- **Pressure Coefficients (\( C_{pe} \) and \( C_{pi} \)) and Force Coefficient (\( C_f \))**:  
-  \( C_{pe} \) quantifies the external pressure distribution on a surface, while \( C_{pi} \) quantifies the internal pressure. The force coefficient \( C_f \) is used to convert pressure into total wind force.
-
-### 3.2 Key Definitions
-
-- **Angle of Attack:**  
-  The angle between the wind direction and a reference axis of the structure; important for determining wind interaction with different surfaces.
-
-- **Effective Frontal Area (\( A_e \))**:  
-  The projected area of the structure normal to the wind direction, used in calculating the total wind force.
-
-- **Terrain Categories:**  
-  Ground surfaces are classified (Categories 1 to 4) based on roughness, which influences the wind speed profile. For instance, open sea or flat plains (Category 1) have very low roughness compared to urban centers (Category 4).
-
-- **Gust and Turbulence:**  
-  Gusts are short-term fluctuations in wind speed; turbulence intensity quantifies these fluctuations, which is critical for evaluating dynamic wind effects on structures.
+## 2. References  
+- **Primary Reference**:  
+  - `IS 15498:2004`: Guidelines for improving cyclonic resistance of low-rise structures.  
 
 ---
 
-## 4. Wind Speed Determination
-
-### 4.1 Basic Wind Speed (\( V_b \))
-
-The basic wind speed \( V_b \) is defined as the 3-second gust speed measured at 10 m above ground in open terrain (typically Category 2) and is based on a 50-year return period. It serves as the baseline wind speed for further calculations.
-
-### 4.2 Design Wind Speed (\( V_z \))
-
-The design wind speed is computed using:
-$$
-V_z = V_b \times k_1 \times k_2 \times k_3 \times k_4
-$$
-This formula adjusts the basic wind speed for risk (design life), terrain roughness, topographic effects, and cyclonic conditions. The resulting \( V_z \) is the wind speed used in design calculations at height \( z \).
-
-### 4.3 Hourly Mean Wind Speed and Turbulence
-
-The hourly mean wind speed represents an average over a longer time period than a gust and is used for load assessments over time. Turbulence intensity, calculated using empirical relations, helps evaluate the dynamic response of structures, especially tall or flexible ones.
+## 3. Notations  
+| Symbol | Description |  
+|--------|-------------|  
+| `V_b`  | Basic wind speed (m/s) |  
+| `V_z`  | Design wind speed at height `z` |  
+| `k₁`   | Risk coefficient (structure life) |  
+| `k₂`   | Terrain roughness/height factor |  
+| `k₃`   | Topography factor |  
+| `k₄`   | Cyclonic importance factor |  
+| `C_pe` | External pressure coefficient |  
+| `C_pi` | Internal pressure coefficient |  
 
 ---
 
-## 5. Wind Pressure Calculations
-
-### 5.1 Basic Wind Pressure
-
-The basic wind pressure at height \( z \) is given by:
-$$
-p_z = 0.6 \, V_z^2
-$$
-This formula is based on the kinetic energy of moving air, with wind pressure proportional to the square of the wind speed. The constant 0.6 reflects average atmospheric conditions typical in India.
-
-### 5.2 Design Wind Pressure
-
-To refine the basic wind pressure, the design wind pressure is calculated as:
-$$
-p_d = K_d \times K_a \times K_c \times p_z
-$$
-where:
-- \( K_d \) is the wind directionality factor (accounts for the variability in wind direction).
-- \( K_a \) is the area averaging factor (adjusts for pressure variation over large areas).
-- \( K_c \) is the combination factor (accounts for the combined effect of different load contributions).
-
-It is ensured that \( p_d \) is not less than 70% of \( p_z \).
-
-### 5.3 Wind Loads on Structural Elements
-
-For a specific element, the net wind load is calculated by:
-$$
-F = (C_{pe} - C_{pi}) \times A \times p_d
-$$
-This expression computes the net force by considering the difference between external and internal pressures over the element’s area.
+## 4. Terminology  
+- **Angle of Attack**: Angle between wind direction and structure’s reference axis.  
+- **Terrain Categories**:  
+  - **Category 1**: Open terrain (e.g., flat plains, coasts).  
+  - **Category 4**: Dense urban areas (e.g., city centers).  
+- **Turbulence Intensity**: Ratio of wind speed fluctuations to mean wind speed.  
+- **Return Period**: Statistical likelihood of extreme wind speeds (e.g., 50-year return period = 2% annual exceedance probability).  
 
 ---
 
-## 6. Pressure Coefficients and Force Calculations
-
-### 6.1 External Pressure Coefficients (\( C_{pe} \))
-
-Pressure coefficients describe how wind pressure is distributed on a surface. Values vary with surface geometry and include adjustments for local effects such as edge suction. The standard provides tables with average \( C_{pe} \) values for various building shapes (e.g., walls, pitched roofs, curved roofs).
-
-### 6.2 Internal Pressure Coefficients (\( C_{pi} \))
-
-Internal pressure coefficients depend on the permeability of the building envelope. Buildings with few openings generally use \( \pm 0.2 \), whereas those with larger openings may use values up to \( \pm 0.7 \).
-
-### 6.3 Total Wind Force on a Structure
-
-The total wind force on a building is estimated using:
-$$
-F = C_f \times A_e \times p_d
-$$
-Here, \( C_f \) is a force coefficient that reflects the overall geometry and wind direction, and \( A_e \) is the effective frontal area. This formula is used to design the structural system to resist wind loads.
-
-### 6.4 Frictional Drag (Additional Load)
-
-For certain building configurations, frictional drag can contribute additional force. An example formula for rectangular clad buildings is:
-$$
-F' = C_{f'} \left[ (d - 4h) \, b \, p_d + (d - 4b) \, (2h) \, p_d \right]
-$$
-where \( C_{f'} \) is the frictional drag coefficient, and \( d \), \( b \), and \( h \) are dimensions of the building. This term accounts for the additional force due to surface friction when the building has corrugated or ribbed surfaces.
+## 5. General Wind Characteristics  
+- **Wind Behavior**:  
+  - Gusts impact cladding, roofing, and slender elements.  
+  - Cyclones dominate coastal regions (e.g., Gujarat, Odisha).  
+- **Pressure Effects**:  
+  - **External**: Windward (positive) and leeward (negative) pressures.  
+  - **Internal**: Depends on building permeability (e.g., ±0.2 for normal openings).  
+- **Human Comfort**: Limit vibrations in tall buildings (e.g., peak acceleration ≤ 0.15 m/s²).  
 
 ---
 
-## 7. Additional Provisions
+## 6. Wind Speed Determination  
+### 6.1–6.2 Basic Wind Speed  
+- **Map-Based**: `V_b` derived from 50-year return period map (Fig. 1).  
+  - **Examples**:  
+    | City          | `V_b` (m/s) |  
+    |---------------|-------------|  
+    | Kolkata       | 50          |  
+    | Mumbai        | 44          |  
+    | Bengaluru     | 33          |  
 
-### 7.1 Special Roof Forms and Local Effects
+### 6.3 Design Wind Speed (`V_z`)  
+- **Formula**:
+- V_z = V_b × k₁ × k₂ × k₃ × k₄
+- **`k₁` (Risk Coefficient)**: Adjusts for structure lifespan (Table 1).  
+  - Hospitals (100-year life): `k₁ = 1.08`.  
+  - Temporary sheds (5-year life): `k₁ = 0.67`.  
+- **`k₂` (Terrain Factor)**: Height-dependent (Table 2).  
+  - At 50m height:  
+    - Category 1: `k₂ = 1.20`.  
+    - Category 4: `k₂ = 1.10`.  
+- **`k₃` (Topography Factor)**: Up to `1.36` for hills/escarpments (Annex C).  
+- **`k₄` (Cyclone Factor)**: `1.30` for shelters, `1.15` for industries.  
 
-For roofs with overhangs, skylights, or canopies, the wind pressure distribution is non-uniform. Additional pressure coefficients and concentration factors are provided to capture these local effects, ensuring that vulnerable components like cladding and glazing are properly designed.
-
-### 7.2 Dynamic Effects and the Gust Factor Method
-
-For tall, slender, or irregular structures, wind-induced oscillations can be significant. The Gust Factor Method is applied to amplify static wind loads to account for dynamic gust effects, ensuring that the structure can safely withstand wind-induced vibrations. Methods for assessing across-wind responses are also included.
+### 6.4–6.6 Turbulence and Offshore Winds  
+- **Turbulence Intensity**: Higher in urban areas (Category 4).  
+- **Offshore Winds**: 15% higher than coastal speeds (e.g., offshore platforms).  
 
 ---
 
-## Conclusion
+## 7. Wind Pressure and Force Calculations  
+### 7.2 Design Wind Pressure (`p_z`)  
+- **Formula**:
+- p_z = 0.6 × V_z² (N/m²)
+- **Adjustments**:  
+- **Directionality (`K_d`)**: `0.9` for rectangular buildings.  
+- **Area Averaging (`K_a`)**: Reduces pressure for large surfaces (Table 4).  
 
-IS 875 (Part 3):2015 provides a comprehensive framework for wind load assessment by combining background explanations with practical formulas. Engineers can use this standard to:
-- Calculate the design wind speed with:
-  $$
-  V_z = V_b \times k_1 \times k_2 \times k_3 \times k_4
-  $$
-- Determine wind pressures using:
-  $$
-  p_z = 0.6 \, V_z^2 \quad \text{and} \quad p_d = K_d \times K_a \times K_c \times p_z
-  $$
-- Estimate net wind forces on individual elements:
-  $$
-  F = (C_{pe} - C_{pi}) \times A \times p_d
-  $$
-- Evaluate total wind force on a structure:
-  $$
-  F = C_f \times A_e \times p_d
-  $$
-- Account for additional effects such as frictional drag and dynamic responses.
+### 7.3 Pressure Coefficients  
+- **External Pressure (`C_pe`)**:  
+- **Walls**: Varies with wind angle (Table 5).  
+- **Pitched Roofs**: Suction up to `-2.0` at edges (Table 6).  
+- **Cylinders**: Negative pressures dominate (Table 19).  
+- **Internal Pressure (`C_pi`)**:  
+- Normal permeability: `±0.2`.  
+- Large openings: `±0.7`.  
 
-By following the organized clauses and sub-clauses, designers can ensure that structures are safe, durable, and comfortable under a variety of wind conditions.
+### 7.4 Force Coefficients  
+- **Drag Force (`C_f`)**:  
+- Rectangular buildings: `1.2–1.4` (depends on aspect ratio).  
+- Circular structures: Varies with Reynolds number (Annex D).  
+
+---
+
+## 8. Interference Effects  
+- **Tall Buildings**:  
+- **Zones Z1–Z4**: Proximity amplifies loads (Fig. 8).  
+- **Interference Factor (`IF`)**: Up to `1.35` in Zone Z1.  
+- **Low-Rise Buildings**: Up to 25% load increase for spacing <5× width.  
+
+---
+
+## 9. Dynamic Effects  
+- **Vortex Shedding**:  
+- Critical for circular structures (e.g., chimneys).  
+- **Frequency**: `f_s = (St × V_z) / D`, where `St` (Strouhal number) = `0.2` (subcritical flow).  
+- **Galloping/Flutter**:  
+- Affects non-circular shapes (e.g., square towers).  
+
+---
+
+## 10. Dynamic Wind Response  
+### 10.2 Along-Wind Gust Response  
+- **Gust Factor (`G`)**: Combines turbulence and resonance effects.  
+- **Peak Acceleration**: Limited to `0.15 m/s²` for human comfort.  
+
+### 10.3 Across-Wind Response  
+- **Base Bending Moment**: Calculated using turbulence spectrum and mode shape.  
+
+---
+
+## Annexes  
+- **Annex A**: Basic wind speeds for 50+ Indian cities.  
+- **Annex C**: Topography factor (`k₃`) for hills/escarpments.  
+- **Annex D**: Wind force on circular sections (subcritical vs. supercritical flow).  
+
+---
+
+## Practical Implications for Designers  
+1. **Site-Specific Analysis**: Terrain and topography significantly influence wind loads.  
+2. **Dynamic Sensitivity**: Ensure natural frequency >1 Hz for tall structures.  
+3. **Cyclone Zones**: Use `k₄ = 1.30` for coastal shelters.  
+4. **Urban Interference**: Account for adjacent structures in dense areas.  
