--- a/800:2007.md
+++ b/800:2007.md
@@ -144,7 +144,35 @@
 - Apply intumescent coatings or fire-resistant boards for insulation.  
 - Calculate fire resistance duration based on member geometry and protection thickness.  
 - Avoid unprotected steel in fire escape routes or high-occupancy zones.  
-- Test fire protection systems as per **IS 3809** for compliance.  
+- Test fire protection systems as per **IS 3809** for compliance.
+
+---
+
+### **Clause 17: Fabrication and Erection**  
+1. **Tolerances**  
+   - **Mill Tolerances**: Permissible deviations in cross-section, sweep, and camber (as per IS 808).  
+   - **Fabrication Tolerances**: Allowable deviations in cutting, drilling, and alignment.  
+   - **Erection Tolerances**: Limits for plumbness, alignment, and leveling of members.  
+
+2. **Fabrication Procedures**  
+   - **Cutting**: Flame/gully cutting with smooth edges; grinding for high-stress regions.  
+   - **Assembly**: Temporary tack welds/bolts for alignment; match-marking for site assembly.  
+
+3. **Welding and Bolting**  
+   - **Welding**: Preheat thick sections (>32 mm); follow IS 813 for weld symbols.  
+   - **Bolting**: Snug-tight or pre-tensioned bolts (HSFG) as per IS 4000.  
+
+4. **Inspection and Testing**  
+   - **NDT**: Ultrasonic testing (UT) for critical welds; magnetic particle testing (MPT) for surface cracks.  
+   - **Load Testing**: Proof testing for connections if specified.  
+
+5. **Painting and Marking**  
+   - **Surface Preparation**: Sandblasting to SA 2.5 grade; primer coat within 6 hours.  
+   - **Marking**: Unique identifiers for each component; match-marking for erection.  
+
+6. **Site Erection**  
+   - **Sequence**: Erect primary frames first, followed by secondary members.  
+   - **Temporary Bracing**: Ensure stability during erection.  
 
 ---  
 
@@ -163,7 +191,3 @@
 3. **Connection Robustness**: Detailed rules for bolted, welded, and pinned joints.  
 4. **Stability Assurance**: Addresses global/local buckling and lateral-torsional failure.  
 5. **Practical Guidance**: Annexures provide design tools for real-world applications.  
-
----  
-
-**Note**: This summary adheres to IS 800:2007 guidelines while emphasizing clarity and practicality for engineers and stakeholders.  
